pkg/front_end/testcases/inference/generic_methods_infer_js_builtin.dart.outline.expect
// Formatted problems:
//
// pkg/front_end/testcases/inference/generic_methods_infer_js_builtin.dart:8:42: Error: Can't access platform private library.
// /*error:IMPORT_INTERNAL_LIBRARY*/ import 'dart:_foreign_helper' show JS;
//                                          ^
//
// pkg/front_end/testcases/inference/generic_methods_infer_js_builtin.dart:8:42: Error: Not found: 'dart:_foreign_helper'
// /*error:IMPORT_INTERNAL_LIBRARY*/ import 'dart:_foreign_helper' show JS;
//                                          ^

library test;
import self as self;

static method main() → dynamic
  ;
